# kubers-crd

./: Cargo.toml  README.md
kube-manifests/: kcdhyd.yaml
src/: main.rs
