[package]
name = "kubers-crd"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = "0.8.21"
kube = { version = "0.93.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.128"
serde_yaml = "0.9.33"